--- a/src/styles/Transfer_window.module.scss
+++ b/src/styles/Transfer_window.module.scss
@@ -1,7 +1,9 @@
+$navy-blue: #001f3f;
+$whitesmoke: #f5f5f5;
 .container {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     height: 100vh;
     width: 100%;
   }
@@ -42,19 +44,18 @@
   }
   
   .submitButton {
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: #fff;
-    font-size: 16px;
+    padding: 0.75rem 1.5rem;
+    background-color: $navy-blue;
+    color: $whitesmoke;
+    font-size: 1rem;
     font-weight: bold;
     border: none;
-    border-radius: 4px;
+    border-radius: 6px;
+    width: 100%;
     cursor: pointer;
-    transition: background-color 0.3s;
   
     &:hover {
-      background-color: #0056b3;
+      background-color: darken($navy-blue, 10%);
     }
   }
   
