--- a/src/styles/LoginForm.module.scss
+++ b/src/styles/LoginForm.module.scss
@@ -11,7 +11,8 @@ $iphone-width: 430px;
   background-color: white;
   text-align: center;
   border-radius: 12px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 10px 8px rgba(0, 0, 0, 0.1);
+  margin-top: 10px;
 }
 
 .brandName {
